objects/RecordType_Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Abnormal_Awesome_Picklist_Field__c</fullName>
        <label>Abnormal/Awesome Picklist Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Abnormal/Awesome PicklistValue1</fullName>
                </value>
                <value>
                    <fullName>Abnormal/Awesome PicklistValue2</fullName>
                </value>
                <value>
                    <fullName>Abnormal/Awesome PicklistValue3</fullName>
                </value>
                <value>
                    <fullName>Abnormal/Awesome PicklistValue4</fullName>
                </value>
                <value>
                    <fullName>Abnormal/Awesome PicklistValue5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent_Value_Set__c</fullName>
        <label>Dependent Value Set</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ValueSet_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Number_based_global_value_set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Normal_Picklist__c</fullName>
        <label>Normal Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueSet_Picklist__c</fullName>
        <label>ValueSet Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Number_based_global_value_set</valueSetName>
        </valueSet>
    </fields>
    <label>RecordType Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Awesome-{0}</displayFormat>
        <label>RecordType Test Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RecordType Test Objects</pluralLabel>
    <recordTypes>
        <fullName>Abnormal_Awesome_Recordtype</fullName>
        <active>true</active>
        <label>Abnormal/Awesome Recordtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal_Record_Type</fullName>
        <active>true</active>
        <label>Normal Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>